fix new height & copy button css in dark mode

--- a/theming/styles.css
+++ b/theming/styles.css
@@ -210,8 +210,11 @@ a:hover {
 .card,
 .pseudolisting {
   border-radius: 0.5rem;
-  padding: 1rem;
   transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.pseudolisting {
+  padding: 1rem;
 }
 
 .card .card-title,
