--- a/theming/theme-dark.scss
+++ b/theming/theme-dark.scss
@@ -221,3 +221,7 @@ code {
 .aa-DetachedOverlay li.aa-Item[aria-selected=true] .search-item * {
     color: white !important;
 }
+
+.tooltip-inner {
+    color: white;
+}
